assets/css/style.scss
---
---

@charset 'UTF-8';
@import 'reset';
@import 'breakpoints';

$primary: #65D1FF;
$secondary: #1E1E1E;
$action: #FF1600;

* { font-family: 'Source Sans Pro', sans-serif; }

body {
  padding-top: 70px;
  @include tablet {
    padding-top: 84px;
  }
}

header, .btn, h2, h3, p {
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 700;
}

h2 {
  color: #000;
  font-size: 35px;
}

h3 {
  color: #000;
  font-size: 25px;
}

p {
  font-size: 20px;
  font-weight: 400;
}

a {
  color: #000;
}

body,
.flex {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

header {
  display: flex;
  align-items: center;
  justify-content: space-between;

  float: left;
  width: 100%;
  padding: 7.5px 0;
  background: $primary;

  position: fixed;
  top: 0;
  z-index: 2;
  @include tablet {
    padding: 15px 0;
  }
  h1 {
    float: left;
    a {
      float: left;
      margin-left: 60px;
      @include small-desktop {
        margin-left: 50px;
      }
      @include tablet {
        margin-left: 25px;
      }
      img {
        display: block;
      }
    }
  }
  div {
    a {
      font-size: 30px;
      font-weight: 700;
      text-decoration: none;
      float: right;
      color: #fff;
      @include tablet {
        font-size: 16px;
      }

      &:first-of-type {
        margin-right: 48px;
        @include small-desktop {
          margin-right: 50px;
        }
        @include tablet {
          margin-right: 26px;
          background: $action;
          padding: 5px 11px 7px 11px;
          border-radius: 18px;
          line-height: 1em;
          margin-top: -3px;
        }
      }
      &:last-of-type {
        margin-right: 68px;
        @include small-desktop {
          margin-right: 50px;
        }
        @include tablet {
          margin-right: 24px;
        }
      }
    }
  }
}

div.internal {
  max-width: 574px;
  margin-bottom: 300px;
  padding: 0 30px;
  @include tablet {
    margin-bottom: 100px;
  }
  &.download {
    max-width: 1000px;
    @include tablet {
      margin-bottom: 200px;
    }
    h2 {
      font-size: 50px;
      margin-top: 136px;
      margin-bottom: 84px;
    }
    p {
      font-size: 35px;
      text-align: center;
    }
    div {
      margin-top: 40px;
      display: flex;
      justify-content: space-evenly;
      @include tablet {
        flex-direction: column;
        margin-top: 0px;
      }
      a {
        width: 40%;
        margin: 0 auto;
        margin-top: 60px;
        img {
          width: 100%;
          margin: 0 auto;
          padding: 0;
          display: block;
          float: left;
        }
      }
    }
  }
  h2 {
    margin: 76px 0 76px;
    text-align: center;
    @include tablet {
      font-size: 30px;
      margin: 30px 0 30px;
    }
  }
  h3 {
    margin-top: 50px;
    @include tablet {
      font-size: 20px;
      margin-top: 30px;
    }
  }
  ul {
    list-style: disc;
    margin: 40px 0 40px 40px;
    @include tablet {
      margin: 13px 0 0 20px;
    }
    li {
      margin-top: 14px;
      font-size: 40px;
      &:first-of-type {
        margin-top: 0;
      }
      @include tablet {
        margin-top: 6px;
        font-size: 16px;
      }
    }
  }
  p {
    margin-top: 14px;
    @include tablet {
      font-size: 16px;
      margin-top: 6px;
    }
  }
}

.box {
  width: 50%;
  min-height: 23em;
  max-height: 60em;
  padding: 1vw;
  @include tablet {
    width: 100%;
    min-height: 300px;
    padding: 30px 50px;
  }

  h3 {
    font-size: 25px;
    @include small-desktop {
      font-size: 50px;
    }
    @include tablet {
      font-size: 30px;
    }
    &.center {
      @include tablet {
        text-align: center;
      }
    }
  }
  .main-img {
    position: absolute;
    right: 43%;
    right: calc(50% - 75px);
    z-index: 1;
    @include desktop {
      display: none;
    }
  }
  .btn {
    margin-top: 14px;
    display: inline-block;
    padding: .3em 1.3em;
    border-radius: 3em;
    background-color: $action;
    font-size: 20px;
    color: #fff;
    text-decoration: none;
    border: none;
    box-shadow: 0 0.25em 0.75em rgba(0, 0, 0, 0.1);
    transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
    &:hover {
      box-shadow: 0 0.35em 0.85em rgba(0, 0, 0, 0.2);
    }
    @include tablet {
      margin-top: 13px;
      padding: .3em 1.3em .5em 1.3em;
      font-size: 16px;
    }
  }
  &.action {
    div {
      width: 55%;
    }
  }
  &.mission {
    text-align: center;
  }
  &.video {
    background: #A160FB;
  }
  &.gif {
    background: #5162FA;
    img {
      @include tablet {
        width: 46%;
      }
    }
  }

  &.users {
    background: $secondary;
    h3 {
      width: 55%;
    }
    h3 {
      color: #fff;
    }
  }

  &.people {
    background: $primary;
    position: relative;
    h3 {
      text-align: center;
    }
    #line {
      height: 178px;
      width: 2px;
      background: #1E1E1E;
      position: absolute;
      top: -79px;
    }
  }
  &.phones {
    @include tablet {
      padding: 40px 50px;
    }
    &.first {
      justify-content: flex-end;
      padding-right: 11.5%;
    }
    &.second {
      justify-content: flex-start;
      padding-left: 11.5%;
    }
    div {
      @include tablet-up {
        padding: 50px 0 70px 0;
      }
    }
    img {
      display: block;
      margin: 0 auto;
      @include tablet {
        width: 50%;
      }
      &:last-of-type {
        margin-top: 30px;
        @include tablet-up {
        }
        @include tablet {
          margin-top: 25px;
        }
      }
    }
  }
}

footer {
  background: $primary;
  padding: 35px 52px 15px;
  color: #fff;
  width: 100%;
  @include tablet {
    padding: 20px 30px 20px;
  }
  * {
    @include tablet {
      text-align: center;
    }
  }
  h3 {
    font-weight: bold;
    color: #fff;
    font-size: 20px;
  }
  ul {
    margin: 13px 0;
    @include tablet {
      margin: 10px 0 15px;
    }
  }
  h3, li, p {
    font-family: Source Sans Pro;
    font-weight: 400;
    font-size: 20px;
    @include tablet {
      font-size: 16px;
    }
  }
  p {
    font-size: 16px;
    @include tablet {
      font-size: 12px;
    }
  }
  a {
    color: #fff;
    text-decoration: none;
  }
}

